--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -77,5 +77,5 @@ runs:
     - if: ${{ runner.os == 'macOS' }}
       run: brew install graphviz
       shell: bash
-    - run: pip install mlcroissant@git+https://github.com/mlcommons/croissant#subdirectory=python/mlcroissant
+    - run: pip install mlcroissant==0.8.1
       shell: bash
