--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -14,6 +14,10 @@ inputs:
     description: 'Extra dependencies'
     required: false
     default: 'tests-all'
+  use-cache:
+    description: 'Use cache'
+    required: false
+    default: 'true'
 
 runs:
   using: 'composite'
@@ -51,13 +55,18 @@ runs:
     - name: Store inputs for identifying Python cache
       run: echo "${{ env.today }}-${{ inputs.extras }}" >> python-cache-keys.txt
       shell: bash
-    - uses: actions/setup-python@v5
+    - if: ${{ inputs.use-cache == 'true' }}
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ inputs.python-version }}
         cache: 'pip'
         cache-dependency-path: |
           setup.py
           python-cache-keys.txt
+    - if: ${{ inputs.use-cache == 'false' }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ inputs.python-version }}
 
     # Install Python deps.
     # If Python cache is restored then we don't need to install dependencies again.
