Update ubuntu-latest to ubuntu-20.04
See https://github.com/orgs/community/discussions/120966

PiperOrigin-RevId: 627687732

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -85,7 +85,7 @@ jobs:
         shard-id: ${{ fromJson(needs.shards-job.outputs.shard-ids) }}
         # TF suppported versions: https://www.tensorflow.org/install/pip#software_requirements
         python-version: ['3.10', '3.11']
-        os-version: [ubuntu-latest, macos-latest]
+        os-version: [ubuntu-20.04, macos-latest]
 
     steps:
     - uses: actions/checkout@v3
