--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -9,7 +9,7 @@ inputs:
   python-version:
     description: 'Python version'
     required: false
-    default: '3.10'
+    default: 3.10
   extras:
     description: 'Extra dependencies'
     required: false
@@ -17,7 +17,7 @@ inputs:
   use-cache:
     description: 'Use cache'
     required: false
-    default: 'true'
+    default: true
 
 runs:
   using: 'composite'
