--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -79,13 +79,13 @@ jobs:
       # Do not cancel in-progress jobs if any matrix job fails.
       fail-fast: false
       matrix:
-        tf-version: ['tensorflow', 'tf-nightly']
+        tf-version: ['tensorflow']
         # Can't reference env variables in matrix
         num-shards: ${{ fromJson(needs.shards-job.outputs.num-shards) }}
         shard-id: ${{ fromJson(needs.shards-job.outputs.shard-ids) }}
         # TF suppported versions: https://www.tensorflow.org/install/pip#software_requirements
         python-version: ['3.10', '3.11']
-        os-version: [ubuntu-latest, macos-latest]
+        os-version: [ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v3
