Update actions to use 1.0.9
PiperOrigin-RevId: 679547442

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -86,5 +86,5 @@ runs:
     - if: ${{ runner.os == 'macOS' }}
       run: brew install graphviz
       shell: bash
-    - run: pip install mlcroissant>=1.0.7
+    - run: pip install "mlcroissant>=1.0.9"
       shell: bash
