--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -17,7 +17,7 @@ jobs:
   publish-job:
     # Prevents action from running on forks.
     if: github.repository == 'tensorflow/datasets'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - name: Set nightly build variables
